Fix hamburger menu bug when open on tablet or larger

--- a/src/styles/overrides/react-burger-menu.css
+++ b/src/styles/overrides/react-burger-menu.css
@@ -97,4 +97,10 @@ Note: Beware of modifying this element as it can break the animations - you shou
   .bm-burger-button {
     display: none;
   }
+  .bm-overlay {
+    display: none;
+  }
+  .bm-cross-button {
+    display: none;
+  }
 }
